--- a/main.css
+++ b/main.css
@@ -6,3 +6,9 @@
 input {
   font-size: 16px;
 }
+#title{
+  text-decoration: none;
+  color: blue;
+  font-family: 'Gruppo', cursive;
+  font-size: 40px;
+}
